--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,5 @@
 {
+  "Learn more about": "Erfahre mehr über",
   "About us": "Über uns",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
@@ -54,7 +55,6 @@
   "Keep your employees engaged": "Motiviere deine Mitarbeiter",
   "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.": "Sobald deine ESOPs bei Ledgy eingetragen sind, ist es an der Zeit, deine Mitarbeiter zu aktivieren. Sie können sich jederzeit mit ihrer E-Mail-Adresse selbst bei Ledgy einloggen und sehen, wie viele Aktien sie schon gevested haben.",
   "ESOPs in the employee dashboard": "ESOPs im Mitarbeiter-Dashboard",
-  "Read More about": "Mehr über",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
   "Round Modeling": "Round Modeling",
   "Reporting": "Reporting",
