--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,4 +1,5 @@
 {
+  "Learn more about": "Learn more about",
   "About us": "About us",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.",
   "Our mission": "Our mission",
@@ -54,7 +55,6 @@
   "Keep your employees engaged": "Keep your employees engaged",
   "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.": "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.",
   "ESOPs in the employee dashboard": "ESOPs in the employee dashboard",
-  "Read More about": "Read More about",
   "Discover more about Ledgy": "Discover more about Ledgy",
   "Round Modeling": "Round Modeling",
   "Reporting": "Reporting",
